--- a/client/src/styles/css/global.css
+++ b/client/src/styles/css/global.css
@@ -1,4 +1,15 @@
 .pointer {
   cursor: pointer;
 }
+
+.post-card {
+  color: black;
+  text-decoration: none;
+  background-color: white;
+  border-bottom: 1px solid black;
+}
+
+.post-card:hover {
+  color: black;
+}
 /*# sourceMappingURL=global.css.map */
